--- a/scratch.html
+++ b/scratch.html
@@ -15,7 +15,7 @@
         <li>This is my YouTube channel called Apex Progress</li>
         <ul>
             <li>Here is an example of one of my video thumbnails</li>
-            <img src="assets/img/LBJEdit1Enhanced.jpeg" alt="Thumbnail Image" width="300">
+            <img src="./assets/img/LBJEdit1Enhanced.jpeg" alt="Thumbnail Image" width="300">
             <li>Here is the video</li>
             <iframe width="300" src="https://www.youtube.com/embed/K7nIZLUhwJM"></iframe>
         </ul>
